<resources>
    <string name="app_name">Av2 Exame</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btnCad">Add Issue</string>
    <string name="btnLista">List Issues</string>
    <string name="usuario">Senai</string>
    <string name="email">senai@fieb.org.br</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnCadCancelar">Cancel</string>
    <string name="btnCadSalvar">Save</string>
    <string name="txtUsuario">User</string>
    <string name="txtSenha">Password</string>
    <string name="chkLembrar">Remember me</string>
    <string name="btnLoginCancelar">Cancel</string>
    <string name="btnLoginEntrar">Enter</string>
    <string name="lblLoginTitulo">Login</string>
    <string name="txtTitulo">Title</string>
    <string name="txtSubtitulo">Subtitle</string>
    <string name="txtNumero">#Issue</string>
    <string name="txtAno">Published year</string>
    <string name="txtEditora">Publisher</string>
    <string name="txtCapa">Cover image</string>
</resources>
